--- a/app/views/thankYou.scala.html
+++ b/app/views/thankYou.scala.html
@@ -21,6 +21,4 @@
 }
 
 
-@main(title = title, scripts = scripts, mainJsBundle = js) {
-    <main id="@id" class="gu-content-wrapper"></main>
-}
+@main(title = title, scripts = scripts, mainJsBundle = js, mainId = id)
