--- a/app/views/contributionsLanding.scala.html
+++ b/app/views/contributionsLanding.scala.html
@@ -14,6 +14,4 @@
     </script>
 }
 
-@main(title = title, scripts = scripts, description = description, mainJsBundle = js, mainStyleBundle = css) {
-    <main id="@id" class="gu-content-wrapper"></main>
-}
+@main(title = title, scripts = scripts, description = description, mainJsBundle = js, mainStyleBundle = css, mainId = id)
