--- a/app/views/oneOffContributions.scala.html
+++ b/app/views/oneOffContributions.scala.html
@@ -45,6 +45,4 @@
     </script>
 }
 
-@main(title = title, scripts = scripts, mainJsBundle = js) {
-    <main id="@id" class="gu-content-wrapper"></main>
-}
+@main(title = title, scripts = scripts, mainJsBundle = js, mainId = id)
