--- a/app/views/supportLanding.scala.html
+++ b/app/views/supportLanding.scala.html
@@ -15,6 +15,4 @@
     </script>
 }
 
-@main(title = title, description = description, scripts = scripts, mainJsBundle = js, mainStyleBundle = css) {
-    <main id="@id" class="gu-content-wrapper"></main>
-}
+@main(title = title, description = description, scripts = scripts, mainJsBundle = js, mainStyleBundle = css, mainId = id)
