Split the error styles out into their own stylesheet.

--- a/assets/pages/error/error.scss
+++ b/assets/pages/error/error.scss
@@ -1,3 +1,21 @@
+// -----  gu-sass ----- //
+
+@import '../../stylesheets/gu-sass/gu-sass';
+
+
+// ----- Shared Components ----- //
+
+@import '../../components/headers/simpleHeader/simpleHeader';
+@import '../../components/footer/footer';
+@import '../../components/introduction/introduction';
+@import '../../components/introduction/squaresIntroduction';
+@import '../../components/highlights/highlights';
+@import '../../components/pageSection/pageSection';
+@import '../../components/ctaLink/ctaLink';
+
+
+// ----- Page ----- //
+
 #error-404-page, #error-500-page {
   .component-page-section--ctas {
     @include multiline-top-border;
