--- a/assets/stylesheets/gu-sass/helpers.scss
+++ b/assets/stylesheets/gu-sass/helpers.scss
@@ -70,7 +70,7 @@
       border-right: 1px solid gu-colour(garnett-neutral-4);
       content: "";
       display: inline-block;
-      height: 100%;
+      height: 36px;
       position: absolute;
       top: 0;
       right: 0;
