--- a/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
+++ b/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
@@ -1,15 +1,16 @@
 .component-contribution-payment-ctas {
+  $button-height: 44px;
 
   .component-cta-link {
     background-color: gu-colour(news-garnett-highlight);
     color: gu-colour(garnett-neutral-1);
-    height: 54px;
-    line-height: 54px;
+    height: $button-height;
+    line-height: $button-height;
     box-sizing: border-box;
     padding: 0 $gu-h-spacing;
 
-    @include mq($from: phablet) {
-      width: 501px;
+    @include mq($from: mobileMedium) {
+      width: 301px;
     }
 
     &:hover {
@@ -30,27 +31,26 @@
   .svg-arrow-right-straight {
     fill: gu-colour(garnett-neutral-1);
     height: 35%;
-    top: 18px;
+    top: 15px;
     right: 15px;
 
-    // Fix for IE.
-    @include mq($from: phablet) {
-      left: 465px;
+    @include mq($from: mobileMedium) {
+      left: 268px;
     }
   }
 
   .component-paypal-contribution-button {
-    height: 54px;
+    height: $button-height;
     width: 100%;
 
-    @include mq($from: phablet) {
-      width: 501px;
+    @include mq($from: mobileMedium) {
+      width: 301px;
     }
 
     .svg-arrow-right-straight {
       height: 35%;
-      top: 26px;
-      right: 10px;
+      top: 21px;
+      right: 7px;
     }
   }
 
@@ -60,7 +60,7 @@
     height: 54px;
     width: 100%;
 
-    @include mq($from: phablet) {
+    @include mq($from: mobileMedium) {
       width: 501px;
     }
   }
@@ -68,18 +68,18 @@
   .component-error-message__message {
     padding-right: $gu-h-spacing;
 
-    @include mq($until: phablet) {
+    @include mq($until: mobileMedium) {
       padding-left: $gu-h-spacing;
     }
   }
 
   .component-terms-privacy {
     font-family: $gu-text-sans-web;
-    margin-top: $gu-v-spacing;
+    margin-top: $gu-v-spacing * 3;
   }
 
   .component-cta-link {
-    @include mq($until: phablet) {
+    @include mq($until: mobileMedium) {
       margin-top: $gu-v-spacing * 2;
     }
   }
