--- a/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
+++ b/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
@@ -1,5 +1,6 @@
 .component-contribution-payment-ctas {
   $button-height: 44px;
+  $button-width: 301px;
 
   .component-cta-link {
     background-color: gu-colour(news-garnett-highlight);
@@ -10,7 +11,7 @@
     padding: 0 $gu-h-spacing;
 
     @include mq($from: mobileMedium) {
-      width: 301px;
+      width: $button-width;
     }
 
     &:hover {
@@ -44,7 +45,7 @@
     width: 100%;
 
     @include mq($from: mobileMedium) {
-      width: 301px;
+      width: $button-width;
     }
 
     .svg-arrow-right-straight {
