--- a/assets/components/inlinePaymentLogos/inlinePaymentLogos.scss
+++ b/assets/components/inlinePaymentLogos/inlinePaymentLogos.scss
@@ -13,7 +13,7 @@
   @include mq($from: desktop) {
     position: relative;
     top: 222px;
-    left: 45px;
+    left: 36px;
     float: right;
     .svg-paypal-logo {
       position: relative;
@@ -32,10 +32,17 @@
   @include mq($from: desktop) {
     position: relative;
     top: 158px;
+    left: -12px;
     float: right;
     svg {
       width: 42px;
       height: 27px;
     }
   }
+}
+
+.component-page-section__heading {
+  text-align: right;
+  padding-right: 12px;
+  padding-top: 2px;
 }
