--- a/assets/components/ctaLink/ctaLink.scss
+++ b/assets/components/ctaLink/ctaLink.scss
@@ -7,7 +7,7 @@
   display: block;
   font-family: $gu-text-sans-web;
   font-size: 14px;
-  height: $gu-v-spacing * 2;
+  height: $cta-height;
   line-height: 180%;
   margin-top: 12px;
   padding: 6px 20px;
