--- a/assets/stylesheets/gu-sass/layout.scss
+++ b/assets/stylesheets/gu-sass/layout.scss
@@ -9,6 +9,11 @@ $gu-h-spacing: 20px;
 $gu-v-spacing: 12px;
 
 
+// Size of cta buttons
+$cta-height: 44px;
+$cta-width: 301px;
+
+
 // Margin
 // =============================================================================
 
