--- a/assets/components/dotcomCta/dotcomCta.scss
+++ b/assets/components/dotcomCta/dotcomCta.scss
@@ -4,8 +4,8 @@
     background-color: gu-colour(garnett-neutral-1);
     border: 1px solid gu-colour(garnett-neutral-1);
     color: #fff;
-    height: 54px;
-    line-height: 54px;
+    height: $cta-height;
+    line-height: $cta-height;
     padding: 0 30px 0 25px;
     transition: background-color .3s;
     margin: 0;
