--- a/assets/components/patronsEvents/patronsEvents.scss
+++ b/assets/components/patronsEvents/patronsEvents.scss
@@ -89,8 +89,8 @@
     background: transparent;
     color: gu-colour(garnett-neutral-1);
     border: 1px solid gu-colour(garnett-neutral-1);
-    height: 54px;
-    line-height: 54px;
+    height: $cta-height;
+    line-height: $cta-height;
     padding: 0 30px 0 25px;
     transition: background-color .3s;
 
