--- a/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
+++ b/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
@@ -7,8 +7,7 @@
   display: block;
   font-family: $gu-sans-web;
   font-size: 14px;
-  font-weight: bold;
-  height: $gu-v-spacing * 4;
+  height: $cta-height;
   padding-left: $gu-h-spacing;
   position: relative;
   text-align: left;
