--- a/assets/containerisableComponents/marketingConsent/marketingConsent.scss
+++ b/assets/containerisableComponents/marketingConsent/marketingConsent.scss
@@ -42,8 +42,8 @@
     background-color: gu-colour(garnett-neutral-1);
     border: 1px solid gu-colour(garnett-neutral-1);
     color: #fff;
-    height: 54px;
-    line-height: 54px;
+    height: $cta-height;
+    line-height: $cta-height;
     padding: 0 30px 0 25px;
     transition: background-color .3s;
     margin-bottom: $gu-v-spacing * 3;
@@ -62,7 +62,7 @@
 
   .svg-arrow-right-straight {
     height: 35%;
-    top: 17px;
+    top: 12px;
     right: 13px;
 
     // Fix for IE.
