--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -138,7 +138,6 @@
 		border: 2px solid gu-colour(news-garnett-highlight);
 		font-family: $gu-text-sans-web;
 		height: 44px;
-		font-weight: bold;
 		margin-bottom: $gu-v-spacing;
 	}
 
@@ -147,7 +146,7 @@
 	.oneoff-contrib__payment-methods {
 		.component-stripe-pop-up-button {
 			box-sizing: border-box;
-			height: 54px;
+			height: $cta-height;
 			background-color: gu-colour(news-garnett-highlight);
       color: gu-colour(garnett-neutral-1);
       width: 100%;
@@ -167,7 +166,7 @@
 	}
 
 	.component-paypal-contribution-button {
-		height: 54px;
+		height: $cta-height;
 		margin-top: $gu-v-spacing;
 		width: 100%;
 
