--- a/assets/pages/regular-contributions-existing/regularContributionsExisting.scss
+++ b/assets/pages/regular-contributions-existing/regularContributionsExisting.scss
@@ -3,34 +3,32 @@
 		@include multiline(4, gu-colour(garnett-neutral-4));
 	}
 
-	a {
-		color: gu-colour(neutral-1);
-	}
-
-	// ----- Headings
-
-	.existing {
-		//background-color: darken(gu-colour(garnett-neutral-3), 5%);
-		background-color: gu-colour(garnett-neutral-5);
-	}
-    //
-	.existing__content {
-		background-color: gu-colour(garnett-neutral-5);
-		padding: $gu-v-spacing $gu-h-spacing;
-	}
-
-	.existing__wrapper {
-
-		@include mq($from: desktop) {
-			margin-left: 20%;
-			margin-right: 20%;
-		}
-	}
-
 	.component-existing-contribution {
-      @include mq($from: desktop) {
-        //margin-left: 20%;
-        margin-right: 20%;
+
+      .component-page-section__heading {
+        font-family: $gu-egyptian-web;
+        font-size: 24px;
+        line-height: 1.17;
+        font-weight: bold;
+      }
+
+      .component-page-section__header {
+        position: relative;
+
+        @include dropline;
+      }
+
+      .component-page-section__body {
+        padding-top: $gu-v-spacing / 2;
+        padding-bottom: $gu-v-spacing * 2;
+
+        @include mq($from: desktop) {
+          padding-left: $gu-h-spacing;
+        }
+
+        @include mq($from: phablet) {
+          width: 500px;
+        }
       }
 
 	}
@@ -44,7 +42,6 @@
 		}
 	}
 
-	//todo I just copied this from marketingConsent.scss
 	.component-cta-link {
 		background-color: gu-colour(garnett-neutral-1);
 		border: 1px solid gu-colour(garnett-neutral-1);
@@ -63,10 +60,6 @@
 		&:hover {
 			background-color: darken(gu-colour(garnett-neutral-1), 10%);
 		}
-	}
-
-	.help-further {
-		margin-top: $gu-v-spacing * 4;
 	}
 
 }
