Replace one off contribution link for the recurring contributor page with a link to the mma page.

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -16,6 +16,7 @@
 @import '../components/legal/contribLegal/contribLegal';
 @import '../components/ctaLink/ctaLink';
 @import '../components/dotcomCta/dotcomCta';
+@import '../components/manageContributionCta/manageContributionCta';
 @import '../components/errorMessage/errorMessage';
 @import '../components/progressMessage/progressMessage';
 @import '../components/spinners/animatedDots';
