Applied styling to the errors.

--- a/assets/components/contribute/contribute.scss
+++ b/assets/components/contribute/contribute.scss
@@ -56,6 +56,10 @@
   }
 
   @include multiline-top-border;
+
+  .component-payment-error {
+    margin-top: $gu-v-spacing;
+  }
 }
 
 .component-contribute__description {
