--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -25,6 +25,7 @@
 @import '../../components/ctaLink/ctaLink';
 @import '../../components/legal/contribLegal/contribLegal';
 @import '../../containerisableComponents/payPalContributionButton/payPalContributionButton';
+@import '../../components/switchable/errorComponents/paymentError';
 
 // ----- Page Specific Styles ----- //
 
