--- a/assets/pages/support-landing/supportLanding.scss
+++ b/assets/pages/support-landing/supportLanding.scss
@@ -26,6 +26,7 @@
 @import '../../components/legal/termsPrivacy/termsPrivacy';
 @import '../../components/threeSubscriptions/threeSubscriptions';
 @import '../../components/svgs/svg';
+@import '../../components/switchable/errorComponents/paymentError';
 @import '../../components/whySupport/whySupport';
 @import '../../components/patronsEvents/patronsEvents';
 @import '../../components/readyToSupport/readyToSupport';
