--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -43,6 +43,7 @@
 @import '../components/readyToSupport/readyToSupport';
 @import '../components/signout/signout';
 @import '../components/spreadTheWord/spreadTheWord';
+@import '../components/switchable/errorComponents/paymentError';
 @import '../components/textInput/textInput';
 @import '../components/testUserBanner/testUserBanner';
 @import '../components/threeSubscriptions/threeSubscriptions';
