--- a/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
+++ b/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
@@ -1,7 +1,6 @@
 .component-contribution-payment-ctas {
 
   .component-cta-link {
-    background-color: gu-colour(news-garnett-highlight);
     color: gu-colour(garnett-neutral-1);
     height: $cta-height;
     line-height: $cta-height;
@@ -11,9 +10,22 @@
     @include mq($from: mobileMedium) {
       width: $cta-width;
     }
+  }
+
+  .component-cta-link--contribute-regular {
+    background-color: gu-colour(news-garnett-highlight);
 
     &:hover {
       background-color: darken(gu-colour(news-garnett-highlight), 5%);
+    }
+  }
+
+  .component-cta-link--contribute-one-off {
+    background-color: transparent;
+    border: 1px solid;
+
+    &:hover {
+      background-color: transparent;
     }
   }
 
@@ -79,3 +91,4 @@
     opacity: 0.5;
   }
 }
+
