--- a/assets/containerisableComponents/contributionAwarePaymentLogos/contributionAwarePaymentLogos.scss
+++ b/assets/containerisableComponents/contributionAwarePaymentLogos/contributionAwarePaymentLogos.scss
@@ -1,10 +1,16 @@
 .contribution-aware-payment-logos {
-  position: absolute;
-
-  left: -197px;
-  top: 86%;
-
   height: 20px;
+
+  @include mq($from: desktop) {
+    position: absolute;
+    top: 86%;
+    left: -197px;
+  }
+
+  @include mq($from: wide) {
+    top: 87%;
+  }
+
   svg {
     height: 27px;
     width: 42px;
@@ -13,12 +19,21 @@
 }
 
 .contribution-aware-payment-logos--one-off {
-  top: 70%;
-  left: -150px;
+
+  @include mq($from: desktop) {
+    top: 70%;
+    left: -150px;
+  }
+
+  @include mq($from: wide) {
+    top: 72%;
+  }
 
   .svg-paypal-logo {
-    position: relative;
-    top: -56px;
-    left: -46px;
+    @include mq($from: desktop) {
+      position: relative;
+      top: -56px;
+      left: -46px;
+    }
   }
 }
