[applying-payment-logos] Align both set of buttons

--- a/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
+++ b/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
@@ -13,6 +13,7 @@
   }
 
   .component-cta-link--contribute-regular {
+    margin-top: $gu-v-spacing;
     background-color: gu-colour(news-garnett-highlight);
 
     &:hover {
