--- a/assets/containerisableComponents/payPalContributionButton/payPalContributionButton.scss
+++ b/assets/containerisableComponents/payPalContributionButton/payPalContributionButton.scss
@@ -12,7 +12,7 @@
   position: relative;
   text-align: left;
   width: 100%;
-  margin-top: 20px;
+  margin-top: $gu-v-spacing;
 
   @include mq($from: mobileMedium) {
     width: 304px;
