[applying-payment-logos] Added styles for different breakpoints

--- a/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
+++ b/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
@@ -1,5 +1,9 @@
 .component-contribution-payment-ctas {
 
+  @include mq($until: desktop) {
+    margin-top: 20px;
+  }
+
   .component-cta-link {
     color: gu-colour(garnett-neutral-1);
     height: $cta-height;
