--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -45,7 +45,9 @@
 }
 
 #contributions-landing-page-us {
-  .contribution-aware-payment-logos--one-off {
-    top: 76%;
+  .component-contribution-aware-payment-logos--one-off {
+    @include mq($from: desktop) {
+      top: 76%;
+    }
   }
 }
