--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -47,6 +47,9 @@
 #contributions-landing-page-us {
   .component-contribution-aware-payment-logos--one-off {
     @include mq($from: desktop) {
+      top: 72.5%;
+    }
+    @include mq($from: wide) {
       top: 76%;
     }
   }
