--- a/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
+++ b/assets/components/contributionPaymentCtas/contributionPaymentCtas.scss
@@ -36,8 +36,9 @@
 
   .svg-arrow-right-straight {
     fill: gu-colour(garnett-neutral-1);
-    height: 35%;
-    top: 15px;
+    width: 20px;
+    top: 50%;
+    transform: translateY(-50%);
     right: 15px;
 
     @include mq($from: mobileMedium) {
@@ -51,12 +52,6 @@
 
     @include mq($from: mobileMedium) {
       width: $cta-width;
-    }
-
-    .svg-arrow-right-straight {
-      height: 35%;
-      top: 21px;
-      right: 7px;
     }
   }
 
@@ -82,12 +77,6 @@
   .component-terms-privacy {
     font-family: $gu-text-sans-web;
     margin-top: $gu-v-spacing * 3;
-  }
-
-  .component-cta-link {
-    @include mq($until: mobileMedium) {
-      margin-top: $gu-v-spacing * 2;
-    }
   }
 }
 
