[desktop-only-test-2] Propagate test changes accross the landing page

--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -26,6 +26,7 @@
 @import '../../components/legal/contribLegal/contribLegal';
 @import '../../containerisableComponents/payPalContributionButton/payPalContributionButton';
 @import '../../components/switchable/errorComponents/paymentError';
+@import './desktopAboveTheFold';
 
 // ----- Page Specific Styles ----- //
 
