--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -27,6 +27,7 @@
 @import '../../containerisableComponents/payPalContributionButton/payPalContributionButton';
 @import '../../components/switchable/errorComponents/paymentError';
 @import './desktopAboveTheFold';
+@import './oneOffOnlyTest';
 
 // ----- Page Specific Styles ----- //
 
