[a11y-label-for-select-input] Adding margin top for the country switcher

--- a/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
+++ b/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
@@ -12,6 +12,7 @@
 }
 
 .component-country-group-switcher__selector {
+  margin-top: 8px;
   font-size: 12px;
 
   @include mq($from: mobileLandscape) {
