--- a/app/views/oneOffContributions.scala.html
+++ b/app/views/oneOffContributions.scala.html
@@ -7,6 +7,7 @@
         title: String,
         id: String,
         js: String,
+        css: String,
         defaultStripeConfig: StripeConfig,
         uatStripeConfig: StripeConfig,
         paymentApiStripeEndpoint: String,
@@ -44,4 +45,4 @@
     </script>
 }
 
-@main(title = title, scripts = scripts, mainJsBundle = js, mainId = id)
+@main(title = title, scripts = scripts, mainJsBundle = js, mainId = id, mainStyleBundle = css)
