--- a/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -1,3 +1,29 @@
+// -----  gu-sass ----- //
+
+@import '~stylesheets/gu-sass/gu-sass';
+
+
+// ----- Shared Components ----- //
+
+@import '~components/ctaLink/ctaLink';
+@import '~components/doubleHeading/doubleHeading';
+@import '~components/featureList/featureList';
+@import '~components/footer/footer';
+@import '~components/headers/simpleHeader/simpleHeader';
+@import '~components/highlights/highlights';
+@import '~components/introduction/introduction';
+@import '~components/introduction/circlesIntroduction';
+@import '~components/legal/contribLegal/contribLegal';
+@import '~components/pageSection/pageSection';
+@import '~components/patronsEvents/patronsEvents';
+@import '~components/readyToSupport/readyToSupport';
+@import '~components/svgs/svg';
+@import '~components/threeSubscriptions/threeSubscriptions';
+@import '~components/whySupport/whySupport';
+
+
+// ----- Page-Specific Styles ----- //
+
 #subscriptions-landing-page {
 
   .component-three-subscriptions {
