Split out the existing contributions page.

--- a/assets/pages/regular-contributions-existing/regularContributionsExisting.scss
+++ b/assets/pages/regular-contributions-existing/regularContributionsExisting.scss
@@ -1,3 +1,21 @@
+// -----  gu-sass ----- //
+
+@import '~stylesheets/gu-sass/gu-sass';
+
+
+// ----- Shared Components ----- //
+
+@import '~components/ctaLink/ctaLink';
+@import '~components/footer/footer';
+@import '~components/headers/simpleHeader/simpleHeader';
+@import '~components/introduction/introduction';
+@import '~components/introduction/circlesIntroduction';
+@import '~components/pageSection/pageSection';
+@import '~components/questionsContact/questionsContact';
+
+
+// ----- Page-Specific Styles ----- //
+
 #regular-contributions-existing-page {
 
   .component-page-section--existing-contribution {
