Split out the PayPal error page.

--- a/assets/pages/paypal-error/payPalError.scss
+++ b/assets/pages/paypal-error/payPalError.scss
@@ -1,3 +1,19 @@
+// -----  gu-sass ----- //
+
+@import '../../stylesheets/gu-sass/gu-sass';
+
+
+// ----- Shared Components ----- //
+
+@import '~components/ctaLink/ctaLink';
+@import '~components/footer/footer';
+@import '~components/headers/simpleHeader/simpleHeader';
+@import '~components/infoSection/infoSection';
+@import '~components/socialShare/socialShare';
+
+
+// ----- Page-Specific Styles ----- //
+
 #paypal-error-page {
 
   a {
