Removed wrapper and added background hover on manage contribution CTA.

--- a/assets/pages/regular-contributions-existing/regularContributionsExisting.scss
+++ b/assets/pages/regular-contributions-existing/regularContributionsExisting.scss
@@ -67,9 +67,11 @@
     @include mq($from: mobileMedium) {
       width: 300px;
     }
-  }
 
-  .manage-contribution-cta {
+    &:hover {
+      background-color: darken(gu-colour(garnett-neutral-1), 5%);
+    }
+
     .svg-arrow-right-straight {
       height: 35%;
       top: 17px;
@@ -81,5 +83,4 @@
       }
     }
   }
-
 }
