Deleted main stylesheet.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,7 @@
 	title: String,
 	mainId: String,
 	mainJsBundle: String,
-	mainStyleBundle: String = "styles.css",
+	mainStyleBundle: String,
 	description: Option[String] = None,
 	styles: Html = Html(""),
 	scripts: Html = Html("")
