Used resolved import.

--- a/assets/pages/paypal-error/payPalError.scss
+++ b/assets/pages/paypal-error/payPalError.scss
@@ -1,6 +1,6 @@
 // -----  gu-sass ----- //
 
-@import '../../stylesheets/gu-sass/gu-sass';
+@import '~stylesheets/gu-sass/gu-sass';
 
 
 // ----- Shared Components ----- //
