--- a/app/views/contributionsRedirect.scala.html
+++ b/app/views/contributionsRedirect.scala.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Support the Guardian</title>
-        <link rel="stylesheet" href="@assets("styles.css")">
+        <link rel="stylesheet" href="@assets("contributionsRedirectStyles.css")">
         <link rel="shortcut icon" type="image/png" href="@assets("images/favicons/32x32.ico")">
         <link rel="apple-touch-icon" sizes="152x152" href="@assets("images/favicons/152x152.png")">
         <link rel="apple-touch-icon" sizes="144x144" href="@assets("images/favicons/144x144.png")">
