--- a/assets/pages/paypal-error/payPalError.scss
+++ b/assets/pages/paypal-error/payPalError.scss
@@ -8,7 +8,9 @@
 @import '~components/ctaLink/ctaLink';
 @import '~components/footer/footer';
 @import '~components/headers/simpleHeader/simpleHeader';
-@import '~components/infoSection/infoSection';
+@import '~components/pageSection/pageSection';
+@import '~components/questionsContact/questionsContact';
+@import '~components/spreadTheWord/spreadTheWord';
 @import '~components/socialShare/socialShare';
 
 
@@ -16,32 +18,11 @@
 
 #paypal-error-page {
 
-  a {
-    color: gu-colour(neutral-1);
-  }
-
   // ----- Headings
-
-  .paypal-error {
-    background-color: darken(gu-colour(multimedia-main-2), 5%);
-  }
-
-  .paypal-error__content {
-    background-color: gu-colour(multimedia-main-2);
-    padding: $gu-v-spacing $gu-h-spacing;
-  }
-
-  .paypal-error__wrapper {
-
-    @include mq($from: desktop) {
-      margin-left: 20%;
-      margin-right: 20%;
-    }
-  }
 
   .paypal-error__heading {
     font-family: $gu-egyptian-web;
-    color: gu-colour(neutral-1);
+    color: gu-colour(garnett-neutral-1);
     font-size: 28px;
     line-height: 32px;
     font-weight: bold;
@@ -52,49 +33,56 @@
     }
   }
 
-  .paypal-error__subheading {
+  .paypal-error__copy {
     font-family: $gu-egyptian-web;
-    font-size: 28px;
-    line-height: 32px;
+    font-size: 24px;
+    line-height: 28px;
     font-weight: lighter;
-    color: gu-colour(neutral-1);
+    color: gu-colour(garnett-neutral-1);
+    margin: $gu-v-spacing 0;
 
     @include mq($from: desktop) {
-      font-size: 36px;
-      line-height: 40px;
+      font-size: 28px;
+      line-height: 32px;
+      width: 600px;
+    }
+  }
+
+  .component-page-section__body {
+    padding-top: $gu-v-spacing;
+
+    @include mq($from: desktop) {
+      padding-left: $gu-h-spacing;
     }
   }
 
   .component-cta-link {
-    color: #fff;
-    background: gu-colour(neutral-1);
+    color: gu-colour(garnett-neutral-1);
+    background-color: gu-colour(news-garnett-highlight);
     box-sizing: border-box;
     display: inline-block;
     width: 230px;
-    line-height: 40px;
-    border: 1px solid gu-colour(neutral-1);
+    line-height: 44px;
     font-weight: normal;
     margin-bottom: $gu-v-spacing * 4;
     padding-top: 0;
     padding-bottom: 0;
+    transition: background-color .3s;
 
-    svg {
-      fill: #fff;
-      top: 10px;
+    .svg-arrow-right-straight {
+      fill: gu-colour(garnett-neutral-1);;
+      top: 14px;
+      height: 35%;
       // Fix for IE10.
-      left: 190px;
+      left: 197px;
     }
 
     &:hover {
-      background: darken(gu-colour(neutral-1), 10%);
+      background-color: darken(gu-colour(news-garnett-highlight), 5%);
     }
   }
 
-  .component-social-share {
-    margin-right: $gu-h-spacing / 2;
-
-    svg {
-      margin-top: $gu-v-spacing;
-    }
+  .component-spread-the-word {
+    @include gu-content-filler;
   }
 }
