--- a/assets/components/priceCta/priceCta.scss
+++ b/assets/components/priceCta/priceCta.scss
@@ -85,3 +85,15 @@
   width: 100%;
   box-sizing: border-box;
 }
+
+.component-price-cta--dark {
+  background-color: gu-colour(media-garnett-main-1);
+
+  .component-price-cta__price {
+    background-color: gu-colour(news-garnett-highlight);
+  }
+
+  .component-price-cta__price-copy, .component-price-cta__price-amount {
+    color: gu-colour(garnett-neutral-1);
+  }
+}
