Use theGrid.js to get the image url in the svg

--- a/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
+++ b/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
@@ -31,15 +31,14 @@
   color: #121212;
 }
 
-.middle {
-  display: -webkit-flex; /* Safari */
+.component-independent-journalism__wrapper {
   display: flex;
 }
 
-.amber-rudd {
+.svg-amber-rudd {
   position: relative;
   top: -81px;
   margin-left: 20px;
-  margin-bottom: -122px;
+  margin-bottom: -143px;
   z-index: 2;
 }
