--- a/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
+++ b/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
@@ -1,6 +1,5 @@
 .component-independent-journalism {
   background: gu-colour(neutral-6);
-  border-left: 1px solid #ccc;
 }
 
 .component-independent-journalism__content {
@@ -33,12 +32,22 @@
 
 .component-independent-journalism__wrapper {
   display: flex;
+  position: relative;
 }
 
 .svg-amber-rudd {
   position: relative;
   top: -81px;
-  margin-left: 20px;
+  margin-left: 50px;
   margin-bottom: -143px;
   z-index: 2;
+}
+
+.svg-zuck {
+  float: left;
+  position: absolute;
+  left: -281px;
+  top: -34px;
+  margin-bottom: -123px;
+  z-index: 5;
 }
