--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -21,7 +21,7 @@
 #digital-subscription-landing-page-us,
 #digital-subscription-landing-page-au {
   .component-left-margin-section__content {
-    overflow-x: hidden;
+    //overflow-x: hidden;
   }
 
   // ----- Product Block
