Set right circles at leftCol break

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -333,6 +333,10 @@
         left: 547px;
         width: 210px;
       }
+      @include mq($from: leftCol) {
+        top: 350px;
+        left: 877px;
+      }
     }
 
     .component-grid-picture__image {
